[project]
name = "pulumi-base-infra-do"
version = "0.1.0"
description = ""
authors = [
    {name = "Mauricio Dantas",email = "dantas.mauricio.ti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pulumi (>=3.206.0,<4.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pulumi-digitalocean (>=4.54.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

